--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,4 +19,4 @@ jobs:
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
       - name: Run API tests
         run: |
-          # Her kan du tilføje kommandoen for at køre dine API-tests
+          postman collection run "${{ github.workspace }}/postman/collections/SalesCollection.json"
